client/src/App.css
/* Custom scrollbar for the TopEvents component */
.scrollbar-custom::-webkit-scrollbar {
  height:5px; /* Height of the scrollbar track */
  width: 5px; /* Not needed for horizontal scrollbar, but defining for clarity */
  margin: auto; /* Center scrollbar horizontally */
}

.scrollbar-custom::-webkit-scrollbar-track {
  background: #ECF7FE; /* Color of the scrollbar track */
  border-radius: 5px; 
  height: 2px;/* Rounded corners for the track */
}

.scrollbar-custom::-webkit-scrollbar-thumb {
  background: #888; /* Color of the scrollbar thumb */
  border-radius: 5px; /* Rounded corners for thumb */
  min-height: 2px; /* Minimum height of the scrollbar thumb */
  height: 2px;
}

